project grid section complete

--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@
       <section>
         <div class="project">
           <span class="project__item"
-            ><h3 class="project__name">Atsin</h3>
-            <img class="project__img" src="img/atsin.png" />
+            ><h3 class="project__name">Carbonna</h3>
+            <img class="project__img" src="img/carbonna.png" />
             <div class="project__info-container">
               <p class="project__text">
-                Atsin is a Front end hiking business theme built using SCSS,
-                HTML, JavaScript and CSS. Fully responsive and optimized for
-                best performance using google insights.
+                Front end add to cart application for cars to showcase skills in
+                CSS animations, CSS Grid and modification of the DOM using
+                JavaScript.
               </p>
               <div class="project__row">
                 <a href="#" class="project__links"
@@ -223,13 +223,13 @@
           </span>
 
           <span class="project__item"
-            ><h3 class="project__name">Carbonna</h3>
-            <img class="project__img" src="img/carbonna.png" />
+            ><h3 class="project__name">The Barber</h3>
+            <img class="project__img" src="img/thebarber.png" />
             <div class="project__info-container">
               <p class="project__text">
-                Front end add to cart application for cars to showcase skills in
-                CSS animations, CSS Grid and modification of the DOM using
-                JavaScript.
+                The Barber is a Full Stack Social Media application for Barbers
+                and Clients to connect to one another. Users can search barbers
+                based on location.
               </p>
               <div class="project__row">
                 <a href="#" class="project__links"
@@ -282,9 +282,26 @@
             </div>
           </span>
 
-          <span class="project__item special"
-            ><h3 class="project__name">The Barber</h3></span
-          >
+          <span class="project__item-special">
+            <div class="project__row-special">
+              <a href="#" class="project__links-special"
+                ><i class="fab fa-github-square"></i
+              ></a>
+              <a href="#" class="project__links-special"
+                ><i class="fas fa-paperclip"></i
+              ></a>
+            </div>
+            <div class="project__special-container">
+              <i class="far fa-star star-adjust"></i
+              ><span class="project__repo">Starred repository</span>
+              <h3 class="project__name-special">Atsin</h3>
+              <p class="project__text-special">
+                Atsin is a Front end hiking business theme built using SCSS,
+                HTML, JavaScript and CSS. Fully responsive and optimized for
+                best performance using google insights.
+              </p>
+            </div>
+          </span>
         </div>
       </section>
     </main>
