--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="header">
           <a href="#" class="header__title">JG</a>
           <div class="header__container">
-            <h2 class="header__title-main">Jared Garcia</h2>
+            <h2 class="header__title-main">Developer</h2>
             <p class="header__pg">
               I am immensely passionate Front End Developer from Houston, TX. I
               enjoy building everything from small business sites to large
