setting up php contact form

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       media="all"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -38,18 +42,40 @@
     <main id="main">
       <header>
         <div class="header">
-          <a href="#" class="header__title">JG</a>
+          <a href="#" class="header__title">Jared Garcia</a>
           <div class="header__container">
-            <h2 class="header__title-main">Developer</h2>
-            <p class="header__pg">
-              I am immensely passionate Front End Developer from Houston, TX. I
-              enjoy building everything from small business sites to large
-              interactive client side pages. If you are a business seeking a
-              developer or an employer looking to hire, you can get in touch
-              with me <a class="header__anchor" href="#">here.</a>
-            </p>
-            <a href="#" class="header__resume">View my resume &rarr;</a>
-            <a href="#" class="header__contact">Contact me &rarr;</a>
+            <h2 class="header__title-main">Front End</h2>
+            <p class="header__pg">Developer</p>
+          </div>
+          <div class="header__footer">
+            <div class="header__footer__item">
+              <h3 class="header__footer__heading">Passion</h3>
+              <p class="header__footer__text">
+                I have an immense passion for Front End Development. I enjoy
+                building everything from small business sites to large
+                interactive client side pages.
+              </p>
+            </div>
+
+            <div class="header__footer__item item-special">
+              <h3 class="header__footer__heading">Looking to hire?</h3>
+              <p class="header__footer__text">
+                If you are a business seeking a developer or an employer looking
+                to hire, you can get in touch with me
+                <a
+                  href="mailto:jared_garcia@aol.com"
+                  class="item-special__anchor"
+                  >Here</a
+                >
+              </p>
+            </div>
+
+            <a
+              target="_blank"
+              href="https://jaredspdf.s3.us-east-2.amazonaws.com/newresume.pdf"
+              class="header__resume"
+              >View my resume &rarr;</a
+            >
           </div>
         </div>
       </header>
@@ -111,7 +137,12 @@
               ><span class="intro__span-info">Seeking Opportunitites</span>
             </li>
           </ul>
-          <a class="intro__resume-btn" href="#">View Resume</a>
+          <a
+            class="intro__resume-btn"
+            target="_blank"
+            href="https://jaredspdf.s3.us-east-2.amazonaws.com/newresume.pdf"
+            >View Resume</a
+          >
         </div>
       </div>
 
@@ -172,10 +203,16 @@
                 JavaScript.
               </p>
               <div class="project__row">
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="https://github.com/JGarcia1998/Carbonna"
+                  class="project__links"
                   ><i class="fab fa-github-square"></i
                 ></a>
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="https://fervent-franklin-e8e85b.netlify.app/"
+                  class="project__links"
                   ><i class="fas fa-paperclip"></i
                 ></a>
               </div>
@@ -192,10 +229,16 @@
                 recieved when registering for the website.
               </p>
               <div class="project__row">
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="https://github.com/JGarcia1998/Fitness-Tracker"
+                  class="project__links"
                   ><i class="fab fa-github-square"></i
                 ></a>
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="http://analyzefit.surge.sh/"
+                  class="project__links"
                   ><i class="fas fa-paperclip"></i
                 ></a>
               </div>
@@ -212,10 +255,16 @@
                 based on current or searched locations.
               </p>
               <div class="project__row">
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="https://github.com/JGarcia1998/Weather-Finder"
+                  class="project__links"
                   ><i class="fab fa-github-square"></i
                 ></a>
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="https://practical-swartz-f97bf9.netlify.app/"
+                  class="project__links"
                   ><i class="fas fa-paperclip"></i
                 ></a>
               </div>
@@ -232,10 +281,16 @@
                 based on location.
               </p>
               <div class="project__row">
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="https://github.com/JGarcia1998/The-Barber"
+                  class="project__links"
                   ><i class="fab fa-github-square"></i
                 ></a>
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="http://thebarber.surge.sh/"
+                  class="project__links"
                   ><i class="fas fa-paperclip"></i
                 ></a>
               </div>
@@ -252,10 +307,16 @@
                 project using SCSS.
               </p>
               <div class="project__row">
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="https://github.com/JGarcia1998/Natours"
+                  class="project__links"
                   ><i class="fab fa-github-square"></i
                 ></a>
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="https://adoring-payne-5c45b7.netlify.app/"
+                  class="project__links"
                   ><i class="fas fa-paperclip"></i
                 ></a>
               </div>
@@ -272,10 +333,16 @@
                 articles related to each one.
               </p>
               <div class="project__row">
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="https://github.com/JGarcia1998/Stock-Watch"
+                  class="project__links"
                   ><i class="fab fa-github-square"></i
                 ></a>
-                <a href="#" class="project__links"
+                <a
+                  target="__blank"
+                  href="https://limitless-cliffs-80818.herokuapp.com/"
+                  class="project__links"
                   ><i class="fas fa-paperclip"></i
                 ></a>
               </div>
@@ -284,10 +351,16 @@
 
           <span class="project__item-special">
             <div class="project__row-special">
-              <a href="#" class="project__links-special"
+              <a
+                target="__blank"
+                href="https://github.com/JGarcia1998/Atsin"
+                class="project__links-special"
                 ><i class="fab fa-github-square"></i
               ></a>
-              <a href="#" class="project__links-special"
+              <a
+                target="__blank"
+                href="https://trusting-brahmagupta-0deb8a.netlify.app/"
+                class="project__links-special"
                 ><i class="fas fa-paperclip"></i
               ></a>
             </div>
@@ -304,6 +377,66 @@
           </span>
         </div>
       </section>
+
+      <section>
+        <div class="contact">
+          <div class="contact__one-half">
+            <h2 class="contact__title">Let's get in touch</h2>
+            <p class="contact__text">
+              I'm Available anytime via email or phone.
+            </p>
+            <div class="contact__info-container">
+              <div class="contact__flex">
+                <i class="fas fa-mobile-alt"></i>
+                <p class="contact__phone">832-594-0458</p>
+              </div>
+              <div class="contact__flex">
+                <i class="far fa-envelope"></i>
+                <p class="contact__email">Jared_Garcia@aol.com</p>
+              </div>
+            </div>
+
+            <div class="contact__socials">
+              <p>Socials</p>
+              <a
+                class="socials"
+                href="https://www.linkedin.com/in/jared-garcia-3a51741a6/"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+              <a class="socials" href="https://github.com/JGarcia1998"
+                ><i class="fab fa-github-square"></i
+              ></a>
+            </div>
+          </div>
+
+          <div class="contact__second-half">
+            <div class="contact__triangle"></div>
+            <form method="post" action="contact.php">
+              <input
+                name="name"
+                placeholder="Name"
+                class="contact__input-1"
+                type="text"
+              />
+              <input
+                name="mail"
+                placeholder="Email"
+                class="contact__input-2"
+                type="text"
+              />
+              <textarea
+                name="message"
+                placeholder="Message"
+                class="contact__input-3"
+              ></textarea>
+              <button name="submit" value="send message" type="submit" class="contact__btn">
+                Send message
+                <p class="contact__arrow">&rarr;</p>
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
     <div id="sidebar" class="sidebar">
@@ -311,27 +444,45 @@
       <label for="sidebar-input" class="sidebar__label"></label>
       <div class="sidebar__container">
         <div class="social-wrapper">
-          <a href="#" class="github"><i class="fab fa-github-square"></i></a>
-          <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
+          <a
+            target="__blank"
+            href="https://github.com/JGarcia1998"
+            class="github"
+            ><i class="fab fa-github-square"></i
+          ></a>
+          <a
+            target="__blank"
+            href="https://www.linkedin.com/in/jared-garcia-3a51741a6/"
+            class="linkedin"
+            ><i class="fab fa-linkedin"></i
+          ></a>
         </div>
-        <a href="#" class="sidebar__link"
-          ><i class="fas fa-book icon"></i>Projects</a
-        >
-        <a href="#" class="sidebar__link"
-          ><i class="fas fa-magic icon"></i>Skills</a
-        >
 
         <a href="#" class="sidebar__link"
           ><i class="fas fa-user icon"></i>About</a
         >
+
         <a href="#" class="sidebar__link"
-          ><i class="fas fa-paperclip icon"></i>Resume</a
+          ><i class="fas fa-magic icon"></i>Skills</a
         >
         <a href="#" class="sidebar__link"
-          ><i class="fas fa-code-branch icon"></i>Github</a
+          ><i class="fas fa-book icon"></i>Projects</a
         >
         <a href="#" class="sidebar__link"
           ><i class="fas fa-phone-volume icon"></i>Contact</a
+        >
+
+        <a
+          target="__blank"
+          href="https://jaredspdf.s3.us-east-2.amazonaws.com/newresume.pdf"
+          class="sidebar__link"
+          ><i class="fas fa-paperclip icon"></i>Resume</a
+        >
+        <a
+          target="__blank"
+          href="https://github.com/JGarcia1998"
+          class="sidebar__link"
+          ><i class="fas fa-code-branch icon"></i>Github</a
         >
       </div>
     </div>
