--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <p class="project__text">
                 Front end add to cart application for cars to showcase skills in
                 CSS animations, CSS Grid and modification of the DOM using
-                JavaScript.
+                JavaScript. Fully responsive for all devices.
               </p>
               <div class="project__row">
                 <a
@@ -379,70 +379,62 @@
         </div>
       </section>
 
-      <section id="contact">
-        <div class="contact">
-          <div class="contact__one-half">
-            <h2 class="contact__title">Let's get in touch</h2>
-            <p class="contact__text">
-              If you have any questions regarding projects, or just want to get
-              in touch, I can be reached via email or phone. If you'd like to
-              see more of my work, my socials can be found below.
-            </p>
-            <div class="contact__info-container">
-              <div class="contact__flex">
-                <i class="fas fa-mobile-alt"></i>
-                <p class="contact__phone">832-594-0458</p>
-              </div>
-              <div class="contact__flex">
-                <i class="far fa-envelope"></i>
-                <p class="contact__email">Jared_Garcia@aol.com</p>
-              </div>
-            </div>
+      <section id="contact" class="contact">
+        <div class="contact__form-container">
+          <div class="contact-left">
+            <h2 class="contact-left__title">Contact Me</h2>
 
-            <div class="contact__socials">
-              <p>Socials</p>
-              <a
-                class="socials"
-                href="https://www.linkedin.com/in/jared-garcia-3a51741a6/"
+            <span class="contact-left-info"
+              ><i class="fas fa-mobile-alt"></i>
+              <p class="contact-left-text">+1 832-594-0458</p></span
+            >
+            <span class="contact-left-info"
+              ><i class="far fa-envelope"></i>
+              <p class="contact-left-text">Jared_Garcia@aol.com</p></span
+            >
+            <span class="contact-left-info"
+              ><i class="far fa-compass"></i>
+              <p class="contact-left-text">College Station, TX</p></span
+            >
+            <div class="contact-left__social-container">
+              <span class="contact-left-socials"
                 ><i class="fab fa-linkedin"></i
-              ></a>
-              <a class="socials" href="https://github.com/JGarcia1998"
+              ></span>
+              <span class="contact-left-socials"
                 ><i class="fab fa-github-square"></i
-              ></a>
+              ></span>
             </div>
           </div>
 
-          <form class="contact__second-half" method="post" action="contact.php">
-            <div class="contact__triangle"></div>
-            <input
-              name="name"
-              placeholder="Name"
-              class="contact__input-1"
-              type="text"
-            />
-            <input
-              name="mail"
-              placeholder="Email"
-              class="contact__input-2"
-              type="text"
-            />
-            <textarea
-              name="message"
-              placeholder="Message"
-              class="contact__input-3"
-            ></textarea>
-            <button
-              name="submit"
-              value="send message"
-              type="submit"
-              class="contact__btn"
-            >
-              Send message
-              <p class="contact__arrow">&rarr;</p>
-            </button>
-          </form>
+          <div class="contact__info-container">
+            <h2 class="contact__title">Get in touch</h2>
+            <p class="contact__text">
+              Feel free to message me using the form below
+            </p>
+            <form class="contact__form">
+              <input class="contact__inputs" type="text" placeholder="Name" />
+              <input class="contact__inputs" type="text" placeholder="Email" />
+              <textarea
+                class="contact__inputs"
+                rows="6"
+                placeholder="Message"
+              ></textarea>
+              <button class="contact__btn" type="submit">Send</button>
+            </form>
+          </div>
         </div>
       </section>
+      <svg
+        class="svg"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1440 320"
+      >
+        <path
+          fill="rgb(29, 29, 29)"
+          fill-opacity="1"
+          d="M0,160L60,138.7C120,117,240,75,360,64C480,53,600,75,720,96C840,117,960,139,1080,128C1200,117,1320,75,1380,53.3L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
+        ></path>
+      </svg>
     </main>
 
     <div id="sidebar" class="sidebar">
