--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@
               <p class="header__footer__text">
                 If you are a business seeking a developer or an employer looking
                 to hire, you can get in touch with me
-                <a
-                  href="mailto:jared_garcia@aol.com"
-                  class="item-special__anchor"
-                  >Here</a
-                >
+                <a href="#contact" class="item-special__anchor scroll">Here</a>
               </p>
             </div>
 
@@ -488,10 +484,7 @@
         >
       </div>
     </div>
-    <script
-      type="text/javascript"
-      src="http://code.jquery.com/jquery-latest.min.js"
-    ></script>
+
     <script src="js/app.js"></script>
   </body>
 </html>
