--- a/main.html
+++ b/main.html
@@ -249,7 +249,7 @@
 
           <span class="project__item"
             ><h3 class="project__name">Analyze Fit</h3>
-            <img class="project__img" src="img/analyzefit.jpg" />
+            <img class="project__img" src="/img/analyzefit.jpg" />
             <div class="project__info-container">
               <p class="project__text">
                 Analyze Fit is a Full Stack Application used for reaching daily
