--- a/main.html
+++ b/main.html
@@ -353,7 +353,7 @@
 
           <span class="project__item"
             ><h3 class="project__name">Stock Watch</h3>
-            <img class="project__img" src="./img/stockwatch.png" />
+            <img class="project__img" src="img/stockwatch.png" />
             <div class="project__info-container">
               <p class="project__text">
                 Stock Watch is a Full Stack application for watch listing all
