--- a/main.html
+++ b/main.html
@@ -275,7 +275,7 @@
 
           <span class="project__item"
             ><h3 class="project__name">Weather Finder</h3>
-            <img class="project__img" src="weatherapp.jpg" />
+            <img class="project__img" src="newportfolio/img/weatherapp.jpg" />
             <div class="project__info-container">
               <p class="project__text">
                 Weather Finder is a single Page Front End Application clone of
