--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
           <span class="project__item"
             ><h3 class="project__name">Weather Finder</h3>
-            <img class="project__img" src="/img/weatherapp.jpg" />
+            <img class="project__img" src="img/weatherapp.jpg" />
             <div class="project__info-container">
               <p class="project__text">
                 Weather Finder is a single Page Front End Application clone of
@@ -301,7 +301,7 @@
 
           <span class="project__item"
             ><h3 class="project__name">The Barber</h3>
-            <img class="project__img" src="/thebarber.png" />
+            <img class="project__img" src="img/thebarber.png" />
             <div class="project__info-container">
               <p class="project__text">
                 The Barber is a Full Stack Social Media application for Barbers
@@ -327,7 +327,7 @@
 
           <span class="project__item"
             ><h3 class="project__name">Natours</h3>
-            <img class="project__img" src="natours.jpg" />
+            <img class="project__img" src="img/natours.jpg" />
             <div class="project__info-container">
               <p class="project__text">
                 Natours is an Front End application built to showcase smooth
