--- a/main.html
+++ b/main.html
@@ -301,7 +301,7 @@
 
           <span class="project__item"
             ><h3 class="project__name">The Barber</h3>
-            <img class="project__img" src="../img/thebarber.png" />
+            <img class="project__img" src="./img/thebarber.png" />
             <div class="project__info-container">
               <p class="project__text">
                 The Barber is a Full Stack Social Media application for Barbers
