--- a/main.html
+++ b/main.html
@@ -278,10 +278,7 @@
 
           <span class="project__item"
             ><h3 class="project__name">Weather Finder</h3>
-            <img
-              class="project__img"
-              src="/Users/jaredgaria/Desktop/newportfolio/img/weatherapp.jpg"
-            />
+            <img class="project__img" src="/img/weatherapp.jpg" />
             <div class="project__info-container">
               <p class="project__text">
                 Weather Finder is a single Page Front End Application clone of
