--- a/main.html
+++ b/main.html
@@ -223,7 +223,7 @@
 
           <span class="project__item"
             ><h3 class="project__name">Carbonna</h3>
-            <img class="project__img" src=".//img/carbonna.jpg" />
+            <img class="project__img" src="/newportfolio/img/carbonna.jpg" />
             <div class="project__info-container">
               <p class="project__text">
                 Front end add to cart application for cars to showcase skills in
