--- a/main.html
+++ b/main.html
@@ -169,22 +169,27 @@
           <i class="fab fa-js-square personal"></i>
           <p class="skill-name">JavaScript</p>
         </div>
+
         <div class="wrapper">
           <i class="fab fa-node personal"></i>
           <p class="skill-name">Node.js</p>
         </div>
+
         <div class="wrapper">
-          <i class="fab fa-php personal"></i>
-          <p class="skill-name">PHP</p>
+          <i class="fas fa-keyboard personal"></i>
+          <p class="skill-name">TypeScript</p>
         </div>
-        <div class="wrapper">
-          <i class="fab fa-python personal"></i>
-          <p class="skill-name">Python</p>
-        </div>
+
         <div class="wrapper">
           <i class="fas fa-layer-group personal"></i>
-          <p class="skill-name">REST API</p>
+          <p class="skill-name">Redux</p>
         </div>
+
+        <div class="wrapper">
+          <i class="fas fa-database personal"></i>
+          <p class="skill-name">SQL</p>
+        </div>
+
         <div class="wrapper">
           <i class="fas fa-mobile-alt personal"></i>
           <p class="skill-name">Responsive Design</p>
